--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "python.linting.flake8Args": [
+    "--rcfile=backend/setup.cfg"
+  ]
 }
