--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors=["Anythink"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.9.13"
+python = "3.10.6"
 uvicorn = "^0.17.4"
 fastapi = "^0.73.0"
 pydantic = { version = "^1.8", extras = ["email", "dotenv"] }
@@ -23,6 +23,7 @@ Unidecode = "^1.3"
 loguru = "^0.6.0"
 requests = "^2.28.0"
 gunicorn = "^20.1.0"
+openai = "^0.27.4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
