--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ./:/usr/src
     ports:
       - "3000:3000"
+    env_file:
+      - ./.env
     environment:
       - APP_ENV=dev
       - SECRET_KEY=secret
