--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,43 +1,53 @@
-aiosql==3.3.1 ; python_full_version == "3.9.13"
-alembic==1.7.6 ; python_full_version == "3.9.13"
-anyio==3.5.0 ; python_full_version == "3.9.13"
-asgiref==3.5.0 ; python_full_version == "3.9.13"
-asyncpg==0.25.0 ; python_full_version == "3.9.13"
-bcrypt==3.2.0 ; python_full_version == "3.9.13"
-certifi==2021.10.8 ; python_full_version == "3.9.13"
-cffi==1.15.0 ; python_full_version == "3.9.13"
-charset-normalizer==2.0.11 ; python_full_version == "3.9.13"
-click==8.0.3 ; python_full_version == "3.9.13"
-colorama==0.4.4 ; sys_platform == "win32" and python_full_version == "3.9.13" or platform_system == "Windows" and python_full_version == "3.9.13"
-contextlib2==21.6.0 ; python_full_version == "3.9.13"
-databases==0.5.5 ; python_full_version == "3.9.13"
-dnspython==2.2.0 ; python_full_version == "3.9.13"
-email-validator==1.1.3 ; python_full_version == "3.9.13"
-fastapi==0.73.0 ; python_full_version == "3.9.13"
-greenlet==1.1.2 ; python_full_version == "3.9.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
-gunicorn==20.1.0 ; python_full_version == "3.9.13"
-h11==0.12.0 ; python_full_version == "3.9.13"
-idna==3.3 ; python_full_version == "3.9.13"
-loguru==0.6.0 ; python_full_version == "3.9.13"
-mako==1.1.6 ; python_full_version == "3.9.13"
-markupsafe==2.0.1 ; python_full_version == "3.9.13"
-passlib[bcrypt]==1.7.4 ; python_full_version == "3.9.13"
-psycopg2-binary==2.9.3 ; python_full_version == "3.9.13"
-pycparser==2.21 ; python_full_version == "3.9.13"
-pydantic==1.9.0 ; python_full_version == "3.9.13"
-pydantic[dotenv,email]==1.9.0 ; python_full_version == "3.9.13"
-pyjwt==2.3.0 ; python_full_version == "3.9.13"
-pypika==0.48.8 ; python_full_version == "3.9.13"
-python-dotenv==0.19.2 ; python_full_version == "3.9.13"
-python-slugify==5.0.2 ; python_full_version == "3.9.13"
-requests==2.28.0 ; python_full_version == "3.9.13"
-six==1.16.0 ; python_full_version == "3.9.13"
-sniffio==1.2.0 ; python_full_version == "3.9.13"
-sqlalchemy==1.4.31 ; python_full_version == "3.9.13"
-starlette==0.17.1 ; python_full_version == "3.9.13"
-text-unidecode==1.3 ; python_full_version == "3.9.13"
-typing-extensions==3.10.0.2 ; python_full_version == "3.9.13"
-unidecode==1.3.2 ; python_full_version == "3.9.13"
-urllib3==1.26.9 ; python_full_version == "3.9.13"
-uvicorn==0.17.4 ; python_full_version == "3.9.13"
-win32-setctime==1.1.0 ; sys_platform == "win32" and python_full_version == "3.9.13"
+aiohttp==3.8.4 ; python_full_version == "3.10.6"
+aiosignal==1.3.1 ; python_full_version == "3.10.6"
+aiosql==3.3.1 ; python_full_version == "3.10.6"
+alembic==1.7.6 ; python_full_version == "3.10.6"
+anyio==3.5.0 ; python_full_version == "3.10.6"
+asgiref==3.5.0 ; python_full_version == "3.10.6"
+async-timeout==4.0.2 ; python_full_version == "3.10.6"
+asyncpg==0.25.0 ; python_full_version == "3.10.6"
+attrs==21.4.0 ; python_full_version == "3.10.6"
+bcrypt==3.2.0 ; python_full_version == "3.10.6"
+certifi==2021.10.8 ; python_full_version == "3.10.6"
+cffi==1.15.0 ; python_full_version == "3.10.6"
+charset-normalizer==2.0.11 ; python_full_version == "3.10.6"
+click==8.0.3 ; python_full_version == "3.10.6"
+colorama==0.4.4 ; python_full_version == "3.10.6" and sys_platform == "win32" or python_full_version == "3.10.6" and platform_system == "Windows"
+contextlib2==21.6.0 ; python_full_version == "3.10.6"
+databases==0.5.5 ; python_full_version == "3.10.6"
+dnspython==2.2.0 ; python_full_version == "3.10.6"
+email-validator==1.1.3 ; python_full_version == "3.10.6"
+fastapi==0.73.0 ; python_full_version == "3.10.6"
+frozenlist==1.3.3 ; python_full_version == "3.10.6"
+greenlet==1.1.2 ; python_full_version == "3.10.6" and platform_machine == "aarch64" or python_full_version == "3.10.6" and platform_machine == "ppc64le" or python_full_version == "3.10.6" and platform_machine == "x86_64" or python_full_version == "3.10.6" and platform_machine == "amd64" or python_full_version == "3.10.6" and platform_machine == "AMD64" or python_full_version == "3.10.6" and platform_machine == "win32" or python_full_version == "3.10.6" and platform_machine == "WIN32"
+gunicorn==20.1.0 ; python_full_version == "3.10.6"
+h11==0.12.0 ; python_full_version == "3.10.6"
+idna==3.3 ; python_full_version == "3.10.6"
+loguru==0.6.0 ; python_full_version == "3.10.6"
+mako==1.1.6 ; python_full_version == "3.10.6"
+markupsafe==2.0.1 ; python_full_version == "3.10.6"
+multidict==6.0.4 ; python_full_version == "3.10.6"
+openai==0.27.4 ; python_full_version == "3.10.6"
+passlib[bcrypt]==1.7.4 ; python_full_version == "3.10.6"
+psycopg2-binary==2.9.3 ; python_full_version == "3.10.6"
+pycparser==2.21 ; python_full_version == "3.10.6"
+pydantic==1.9.0 ; python_full_version == "3.10.6"
+pydantic[dotenv,email]==1.9.0 ; python_full_version == "3.10.6"
+pyjwt==2.3.0 ; python_full_version == "3.10.6"
+pypika==0.48.8 ; python_full_version == "3.10.6"
+python-dotenv==0.19.2 ; python_full_version == "3.10.6"
+python-slugify==5.0.2 ; python_full_version == "3.10.6"
+requests==2.28.0 ; python_full_version == "3.10.6"
+setuptools==67.6.1 ; python_full_version == "3.10.6"
+six==1.16.0 ; python_full_version == "3.10.6"
+sniffio==1.2.0 ; python_full_version == "3.10.6"
+sqlalchemy==1.4.31 ; python_full_version == "3.10.6"
+starlette==0.17.1 ; python_full_version == "3.10.6"
+text-unidecode==1.3 ; python_full_version == "3.10.6"
+tqdm==4.65.0 ; python_full_version == "3.10.6"
+typing-extensions==3.10.0.2 ; python_full_version == "3.10.6"
+unidecode==1.3.2 ; python_full_version == "3.10.6"
+urllib3==1.26.9 ; python_full_version == "3.10.6"
+uvicorn==0.17.4 ; python_full_version == "3.10.6"
+win32-setctime==1.1.0 ; sys_platform == "win32" and python_full_version == "3.10.6"
+yarl==1.8.2 ; python_full_version == "3.10.6"
