--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /tests/e2e/node_modules
 /.pnp
 .pnp.js
+venv
 
 # testing
 /coverage
@@ -23,6 +24,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.python-version
 
 npm-debug.log*
 yarn-debug.log*
