--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -46,3 +46,5 @@ jobs:
         uses: trywilco/actions@main
         with:
           engine: ${{ secrets.WILCO_ENGINE_URL }}
+        env:
+          OPENAPI_KEY: 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
