--- a/backend/Dockerfile.aws
+++ b/backend/Dockerfile.aws
@@ -3,6 +3,7 @@ FROM python:3.9.13
 ENV VIRTUAL_ENV=/opt/venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+ENV OPENAI_API_KEY $OPENAI_API_KEY
 
 RUN pip install poetry==1.2.0
 
