--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     env_file:
       - .env
     environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - APP_ENV=dev
       - SECRET_KEY=secret
       - DEBUG=True
